--- a/Controllers/appsettings.json
+++ b/Controllers/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=Internship;User ID=postgres;Password=postgres"
+    "PostgresSQL": "Server=localhost;Port=5432;Database=Internship;User ID=postgres;Password=postgres"
   }
 }
