--- a/Controllers/appsettings.json
+++ b/Controllers/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresSQL": "Server=localhost;Port=5432;Database=Internship;User ID=postgres;Password=postgres"
+    "DefaultConnection": "Server=postgres;Port=5432;Database=postgres;Username=postgres;Password=postgres;sslMode=disable"
   }
 }
