--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
-﻿services:
-  controllers:
-    image: controllers
+﻿version: '3.9'
+
+services:
+  application:
     build:
       context: .
       dockerfile: Controllers/Dockerfile
@@ -12,6 +13,7 @@
     depends_on: 
       - postgres
     restart: unless-stopped
+  
   postgres:
     image: postgres:16
     volumes:
@@ -19,7 +21,7 @@
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=Internship
+      - POSTGRES_DB=postgres
     ports:
       - "5432:5432"
     restart: unless-stopped 
